Fix visit row wrapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,10 @@ h3 {
   margin-bottom: 1rem;
 }
 
+.visit {
+  margin-bottom: 5rem;
+}
+
 .visit-header {
   color: #555;
   font-weight: 500;
